--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.16"
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.16.16",
+    "astro-icon": "^1.1.5",
+    "astro-theme-toggle": "^0.8.0"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
